[package]
name = "arrowdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1", features = ["serde"] }
anyhow = "1.0"
rand = "0.8.5"
num_enum = "0.6.1"
derivative = "2.2.0"
crossbeam-skiplist = "0.1.1"
crossbeam-channel = "0.5"
parking_lot = "0.12"
memmap = "0.7.0"
lru = "0.10.0"
lazy_static = "1.4.0"
project-root = "0.2.2"
toml = "0.7.2"
thiserror = "1.0"
once_cell = "1.17.1"
chrono = "0.4.24"
crc = "3.0.1"
log = "0.4.0"
env_logger = "0.10"
atomic_refcell = "0.1.13"
